syntax = "proto3";

// optional = nullable
// may change in future!

import "il2cpp.proto";
import "unity.proto";

// COMMAND/QUERY PACKETS

message InvokeMethod {
    uint64 methodId = 1;
    repeated ProtoDataPayload args = 2;
}

message InvokeMethodResult {
    enum Status {
        ERR = 0;
        OK = 1;
        NOT_FOUND = 2;
    }
    Status status = 1;
    uint64 methodId = 2;
    ProtoDataPayload result = 4;
    string error = 5; /* nullable */
}

message SearchObjects {
    ProtoClassSimpleData componentClass = 1;
    string name = 2; /* nullable */
}

message SearchObjectsResult {
    repeated ProtoObject objects = 1;
}

message GetAllGameObjects {

}

message GetAllGameObjectsResult {
    // TODO: GameObject data such as hierarchy
    repeated ProtoGameObject objects = 1;
}

message GetGameObjectComponents {
    uint64 address = 1;
}
message GetGameObjectComponentsResult {
    repeated ProtoComponent components = 1;
}

message ReadMemory {
    uint64 address = 1;
    uint64 size = 2;
}

message ReadMemoryResult {
    enum Status {
        ERR = 0;
        OK = 1;
    }
    Status status = 1;
    uint64 address = 2;
    bytes data = 3;
}

message WriteMemory {
    uint64 address = 1;
    bytes data = 2;
}

message WriteMemoryResult {
    enum Status {
        ERR = 0;
        OK = 1;
    }
    Status status = 1;
    uint64 address = 2;
    uint64 size = 3;
}

// TODO: Rename?
message PacketWrapper {
    uint64 queryResultId = 1;
    oneof Packet {
        InvokeMethod invokeMethod = 2;
        InvokeMethodResult invokeMethodResult = 3;
        SearchObjects searchObjects = 4;
        SearchObjectsResult searchObjectsResult = 5;
        GetAllGameObjects getAllGameObjects = 6;
        GetAllGameObjectsResult getAllGameObjectsResult = 7;
        GetGameObjectComponents getGameObjectComponents = 8;
        GetGameObjectComponentsResult getGameObjectComponentsResult = 9;
        ReadMemory readMemory = 10;
        ReadMemoryResult readMemoryResult = 11;
        WriteMemory writeMemory = 12;
        WriteMemoryResult writeMemoryResult = 13;
    }
}